--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.0
+cycler==0.12.1
 fastapi==0.109.0
 FastAPI-SQLAlchemy==0.2.1
 flatbuffers==23.5.26
+fonttools==4.47.2
 gast==0.5.4
 google-auth==2.26.2
 google-auth-oauthlib==1.2.0
@@ -19,9 +22,11 @@ h11==0.14.0
 h5py==3.10.0
 idna==3.6
 keras==2.15.0
+kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5.2
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 ml-dtypes==0.2.0
 numpy==1.26.3
 oauthlib==3.2.2
@@ -34,6 +39,8 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.5.3
 pydantic_core==2.14.6
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
